--- a/woocommerce.css
+++ b/woocommerce.css
@@ -1481,9 +1481,9 @@ input.button.added:after,
     height: 18.75px;
     vertical-align: text-bottom;
     width: 20px; }
-    .overlap-light .site-header:not(.stuck) .shopping-cart-link svg {
+    .overlap-light .site-header:not(.stuck) :not(#mobile-navigation) .shopping-cart-link svg {
       fill: #fff; }
-    .overlap-dark .site-header:not(.stuck) .site-header .shopping-cart-link svg {
+    .overlap-dark .site-header:not(.stuck) .shopping-cart-link svg {
       fill: #2d2d2d; }
   .site-header .shopping-cart-link .shopping-cart-count {
     background: #4d8ffb;
